<resources>
    <string name="app_name">maders</string>
    <string name="login_text">faça seu login</string>
    <string name="user">usuário</string>
    <string name="password">senha</string>
    <string name="enter">entrar</string>
    <string name="login_error">Email/Senha invalido</string>
    <string name="products">produtos</string>
    <string name="settings">configurações</string>
    <string name="add_product">adiciona produto</string>
    <string name="add">adiciona</string>
    <string name="portion">Ração</string>
    <string name="username">Aluno Impacta</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="register">Registrar</string>
    <string name="new_password">confirme sua senha</string>
    <string name="email">e-mail</string>
    <string name="register_error">erro ao cadastrar</string>
    <string name="login_success">sucesso!</string>
    <string name="login_success_description">parabéns, você se autenticou!</string>
</resources>